<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:background="#E9DADA"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="234dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:textSize="16sp" />

            <EditText
                android:layout_width="195dp"
                android:layout_height="48dp"
                android:hint="@string/nombre_y_apellidos"
                android:textSize="16sp" />

            <EditText
                android:layout_width="195dp"
                android:layout_height="48dp"
                android:hint="@string/fecha"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etEdad"
                android:layout_width="195dp"
                android:layout_height="48dp"
                android:hint="@string/edad"
                android:textSize="16sp" />

        </LinearLayout>

        <EditText
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/n_mero_de_dientes"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal"
        android:background="@color/black">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="439dp"
        android:background="#F0E9E9"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sangrado"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etSangrado"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/porcentaje"/>

            <Button
                android:layout_width="95dp"
                android:layout_height="48dp"
                android:backgroundTint="#4D4545"
                android:onClick="btnSangrado"
                android:text="@string/enviar"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvSangrado"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="right"
                android:text="@string/riesgo"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ausencia_dientes"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etAusDientes"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:hint="@string/puntos"/>

            <Button
                android:layout_width="95dp"
                android:layout_height="48dp"
                android:backgroundTint="#4D4545"
                android:onClick="btnAusDientes"
                android:text="@string/enviar"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvAusDientes"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="right"
                android:text="@string/riesgo"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/perdida_insercion"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etPerdInsercion"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:hint="@string/porcentaje"/>

            <Button
                android:layout_width="95dp"
                android:layout_height="48dp"
                android:backgroundTint="#4D4545"
                android:onClick="btnPerdInsercion"
                android:text="@string/enviar"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvPerdInsercion"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="right"
                android:text="@string/enviar"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/diabetes"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etDiabetes"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:hint="@string/si_no"/>

            <Button
                android:layout_width="95dp"
                android:layout_height="48dp"
                android:backgroundTint="#4D4545"
                android:onClick="btnDiabetes"
                android:text="@string/enviar"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvDiabetes"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="right"
                android:text="@string/riesgo"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tabaco"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etTabaco"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:hint="@string/_1_2_3"/>

            <Button
                android:layout_width="95dp"
                android:layout_height="48dp"
                android:backgroundTint="#4D4545"
                android:onClick="btnTabaco"
                android:text="@string/enviar"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvTabaco"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="right"
                android:text="@string/riesgo"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/profundidad_bolsa"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etProfBolsa"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:hint="@string/puntos"/>

            <Button
                android:layout_width="95dp"
                android:layout_height="48dp"
                android:backgroundTint="#4D4545"
                android:onClick="btnProfBolsa"
                android:text="@string/enviar"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvProfBolsa"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="right"
                android:text="@string/riesgo"
                android:visibility="invisible" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/black">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#9B8B8B"
        android:orientation="horizontal">

        <Button
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:backgroundTint="#4D4545"
            android:onClick="btnCalcular"
            android:text="@string/calcular" />

        <TextView
            android:id="@+id/tvResultadoFinal"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/resultadoFinal"
            android:textStyle="bold"
            android:textSize="20dp"
            android:visibility="invisible"/>

    </LinearLayout>

</LinearLayout>